[build-system]
requires = ["uv_build>=0.10,<0.11"]
build-backend = "uv_build"

[project]
name = "natsio-natscontext"
version = "0.1.0"
description = "Load `nats` CLI context files (ADR-21) into natsio connect options"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.13"
authors = [{ name = "Corrupt Mane", email = "corruptmane@gmail.com" }]
keywords = ["nats", "nats.io", "natscontext", "nats-cli", "configuration"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = ["natsio"]

[tool.uv.sources]
natsio = { workspace = true }

[tool.uv.build-backend]
module-name = "natsio.natscontext"
namespace = true
